Fix domain page "not found" layout issue (#2474)

--- a/console-webapp/src/app/domains/domainList.component.scss
+++ b/console-webapp/src/app/domains/domainList.component.scss
@@ -12,13 +12,10 @@
     }
   }
 
-  &-domains {
-    position: relative;
-    &__download {
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
+  &-domains__download {
+    position: absolute;
+    top: -55px;
+    right: 0;
   }
 
   &__domains {
@@ -33,6 +30,8 @@
 
   &__domains-table-parent {
     position: relative;
+    width: fit-content;
+    min-width: 100%;
   }
 
   &__domains-table {
